FIX missing margin bottom on gallery

--- a/src/scss/layout/_gallery.scss
+++ b/src/scss/layout/_gallery.scss
@@ -4,6 +4,7 @@
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 2rem;
+  margin-bottom: 10rem;
 
   @include respond-to("small") {
     padding: 0 10rem;
